@@ -1,3 +1,9 @@
+2006-08-05 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j105-UNSTABLE
+
+ * Jenskin updates.
+
+ * popups/login.php nicify
+
 2006-08-03 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j104-UNSTABLE
 
  * Higher width for autocomplete fields.
